Bug 76244 - [Bisected]Rendercheck/tscoords fails
Summary: [Bisected]Rendercheck/tscoords fails
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-17 02:46 UTC by lu hua
Modified: 2014-03-19 03:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2014-03-17 02:46:28 UTC
System Environment:
--------------------------
Platform: Ivybridge
Libdrm:		(master)libdrm-2.4.52-8-gee8c9a1383d4a50871e146ade2fe15b25f3377d4
Mesa:		(master)2e361160ffff036fa65f6ca8ee2490b3b193ff3d
Xserver:	(master)xorg-server-1.15.99.901-62-g81a4952d3dcab9ca3a1ee399c773f5ac352036c4
Xf86_video_intel:(master)2.99.910-106-g8cc1f005c69786243ac69f6505087071787e6f87
Cairo:		(master)bc05dbccd7dd2f137038479b30ed71c98ff81da6
Libva:		(staging)bf2e1773d4373619232c4c653b8cda19ea329441
Libva_intel_driver:(staging)6e1baecded9d23b32daa8e34828b6a5d32a27c46
Kernel         (drm-intel-nightly)b1859622badb7509586987af5269aa525a0c112f

Bug detailed description:
-----------------------------
It fails on all platforms with Xf86_video_intel master branch.
Bisect shows:c64d2572bafeacae25e9b58c8372ce91858c3832 is the first bad commit
commit c64d2572bafeacae25e9b58c8372ce91858c3832
Author:     Chris Wilson <chris@chris-wilson.co.uk>
AuthorDate: Fri Mar 14 13:08:43 2014 +0000
Commit:     Chris Wilson <chris@chris-wilson.co.uk>
CommitDate: Fri Mar 14 13:40:55 2014 +0000

    sna: Allow some leeway when deciding to discard common translations

    Under PictFilterNearest, we can ignore fractional translations (not all
    renderers discard those.) And if we are being approximate, we can loosen
    our tolerance as well.

    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


output:
rendercheck 1.4
Render extension version 0.11
Window format: r8g8b8
Found server-supported format: a8
Found server-supported format: a8r8g8b8
Found server-supported format: x8r8g8b8
Found server-supported format: b8g8r8a8
Found server-supported format: b8g8r8x8
Found server-supported format: r8g8b8
Found server-supported format: b8g8r8
Found server-supported format: r5g5b5
Found server-supported format: b5g5r5
Found server-supported format: x1r5g5b5
Found server-supported format: x1b5g5r5
Found server-supported format: r5g6b5
Found server-supported format: b5g6r5
Found server-supported format: x8b8g8r8
Found server-supported format: x2r10g10b10
Found server-supported format: x2b10g10r10
Beginning transformed src coords test
Beginning transformed src coords test 2
src coords test error of 255.0000 at (3, 1) --
           R     G     B     A
got:       1.000 1.000 1.000 1.000
expected:  1.000 0.000 0.000 1.000
src coords test error of 255.0000 at (1, 2) --
           R     G     B     A
got:       1.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
src coords test error of 255.0000 at (2, 3) --
           R     G     B     A
got:       1.000 1.000 1.000 1.000
expected:  1.000 0.000 0.000 1.000
src coords test error of 255.0000 at (3, 3) --
           R     G     B     A
got:       1.000 0.000 0.000 1.000
expected:  1.000 1.000 1.000 1.000
expected vs tested:
11111 11111
10011 10001
10101 11101
10101 10011
11111 11111
1 tests passed of 2 total
Successful Groups:

Reproduce steps:
----------------------------
1. xinit
2. ./rendercheck -o src,over,overreverse,xor -t tscoords
Comment 1 Chris Wilson 2014-03-17 07:59:25 UTC
commit 28ebbe8fa902a1d3ee4ecbda5041de5e7b68ada7
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Mar 17 07:56:39 2014 +0000

    sna: Fix logic inversion in use of imprecise transform conversion
    
    An accidental drop of the if (!is_translation) broke composite copies
    under a transform.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=76244
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 lu hua 2014-03-19 03:00:23 UTC
Verified.Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.