sna: Fix logic inversion in use of imprecise transform conversion

An accidental drop of the if (!is_translation) broke composite copies
under a transform.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=76244
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>